public/css/styles.css
/* ... */
.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.inset-0 {
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}

.top-0 {
  top: 0px;
}

.right-0 {
  right: 0px;
}

.left-1 {
  left: 0.25rem;
}

.top-5 {
  top: 1.25rem;
}

.left-\[7\.5rem\] {
  left: 7.5rem;
}

.top-4 {
  top: 1rem;
}

.left-\[8\.5rem\] {
  left: 8.5rem;
}

.z-20 {
  z-index: 20;
}

.z-10 {
  z-index: 10;
}

.z-40 {
  z-index: 40;
}

.z-30 {
  z-index: 30;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.mx-5 {
  margin-left: 1.25rem;
  margin-right: 1.25rem;
}

.my-5 {
  margin-top: 1.25rem;
  margin-bottom: 1.25rem;
}

.my-3 {
  margin-top: 0.75rem;
  margin-bottom: 0.75rem;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.inline {
  display: inline;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.h-screen {
  height: 100vh;
}

.h-14 {
  height: 3.5rem;
}

.h-\[3\.5rem\] {
  height: 3.5rem;
}

.h-5 {
  height: 1.25rem;
}

.h-7 {
  height: 1.75rem;
}

.h-\[0\.80rem\] {
  height: 0.80rem;
}

.h-\[20px\] {
  height: 20px;
}

.h-8 {
  height: 2rem;
}

.h-2 {
  height: 0.5rem;
}

.h-\[46\.49vw\] {
  height: 46.49vw;
}

.h-6 {
  height: 1.5rem;
}

.h-9 {
  height: 2.25rem;
}

.h-px {
  height: 1px;
}

.h-4 {
  height: 1rem;
}

.h-\[4\.5rem\] {
  height: 4.5rem;
}

.h-3 {
  height: 0.75rem;
}

.h-20 {
  height: 5rem;
}

.h-\[18px\] {
  height: 18px;
}

.h-\[22px\] {
  height: 22px;
}

.h-\[23px\] {
  height: 23px;
}

.h-\[26px\] {
  height: 26px;
}

.h-\[30px\] {
  height: 30px;
}

.h-\[40px\] {
  height: 40px;
}

.h-\[35px\] {
  height: 35px;
}

.h-\[32px\] {
  height: 32px;
}

.h-\[25px\] {
  height: 25px;
}

.h-\[24px\] {
  height: 24px;
}

.max-h-\[85vh\] {
  max-height: 85vh;
}

.min-h-\[4\.5rem\] {
  min-height: 4.5rem;
}

.w-screen {
  width: 100vw;
}

.w-14 {
  width: 3.5rem;
}

.w-5 {
  width: 1.25rem;
}

.w-\[3\.5rem\] {
  width: 3.5rem;
}

.w-\[20px\] {
  width: 20px;
}

.w-8 {
  width: 2rem;
}

.w-\[85vw\] {
  width: 85vw;
}

.w-\[100\%\] {
  width: 100%;
}

.w-\[90vw\] {
  width: 90vw;
}

.w-6 {
  width: 1.5rem;
}

.w-32 {
  width: 8rem;
}

.w-\[100vw\] {
  width: 100vw;
}

.w-\[22rem\] {
  width: 22rem;
}

.w-7 {
  width: 1.75rem;
}

.w-4 {
  width: 1rem;
}

.w-3 {
  width: 0.75rem;
}

.w-full {
  width: 100%;
}

.w-\[75\%\] {
  width: 75%;
}

.w-\[85\%\] {
  width: 85%;
}

.w-9 {
  width: 2.25rem;
}

.w-\[18px\] {
  width: 18px;
}

.w-\[22px\] {
  width: 22px;
}

.w-\[23px\] {
  width: 23px;
}

.w-\[26px\] {
  width: 26px;
}

.w-\[30px\] {
  width: 30px;
}

.w-\[40px\] {
  width: 40px;
}

.w-\[35px\] {
  width: 35px;
}

.w-\[32px\] {
  width: 32px;
}

.w-\[25px\] {
  width: 25px;
}

.w-\[24px\] {
  width: 24px;
}

.max-w-full {
  max-width: 100%;
}

.max-w-xs {
  max-width: 20rem;
}

.max-w-\[100\%\] {
  max-width: 100%;
}

.-translate-y-2\/4 {
  --tw-translate-y: -50%;
  transform: var(--tw-transform);
}

.rotate-\[140deg\] {
  --tw-rotate: 140deg;
  transform: var(--tw-transform);
}

.rotate-180 {
  --tw-rotate: 180deg;
  transform: var(--tw-transform);
}

.rotate-45 {
  --tw-rotate: 45deg;
  transform: var(--tw-transform);
}

.scale-0 {
  --tw-scale-x: 0;
  --tw-scale-y: 0;
  transform: var(--tw-transform);
}

.scale-125 {
  --tw-scale-x: 1.25;
  --tw-scale-y: 1.25;
  transform: var(--tw-transform);
}

.scale-110 {
  --tw-scale-x: 1.1;
  --tw-scale-y: 1.1;
  transform: var(--tw-transform);
}

.scale-150 {
  --tw-scale-x: 1.5;
  --tw-scale-y: 1.5;
  transform: var(--tw-transform);
}

.transform {
  transform: var(--tw-transform);
}

@-webkit-keyframes bounce {
  0%, 100% {
    transform: translateY(-25%);
    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
            animation-timing-function: cubic-bezier(0.8,0,1,1);
  }

  50% {
    transform: none;
    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
            animation-timing-function: cubic-bezier(0,0,0.2,1);
  }
}

@keyframes bounce {
  0%, 100% {
    transform: translateY(-25%);
    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
            animation-timing-function: cubic-bezier(0.8,0,1,1);
  }

  50% {
    transform: none;
    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
            animation-timing-function: cubic-bezier(0,0,0.2,1);
  }
}

.animate-bounce {
  -webkit-animation: bounce 1s infinite;
          animation: bounce 1s infinite;
}

@-webkit-keyframes pulse {
  50% {
    opacity: .5;
  }
}

@keyframes pulse {
  50% {
    opacity: .5;
  }
}

.animate-pulse {
  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
}

.cursor-pointer {
  cursor: pointer;
}

.cursor-default {
  cursor: default;
}

.select-none {
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}

.resize {
  resize: both;
}

.list-inside {
  list-style-position: inside;
}

.list-outside {
  list-style-position: outside;
}

.list-disc {
  list-style-type: disc;
}

.list-decimal {
  list-style-type: decimal;
}

.grid-cols-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}

.flex-col {
  flex-direction: column;
}

.flex-col-reverse {
  flex-direction: column-reverse;
}

.place-items-center {
  place-items: center;
}

.items-start {
  align-items: flex-start;
}

.items-end {
  align-items: flex-end;
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.gap-y-5 {
  row-gap: 1.25rem;
}

.space-x-10 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
}
/* ... */

